--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.10)
 project(findit CXX)
 
 find_package(SDL3 REQUIRED)
+find_package(SDL3_image REQUIRED)
 find_package(GLEW REQUIRED)
 
 add_executable(findit src/main.cpp
@@ -18,6 +19,7 @@ add_executable(findit src/main.cpp
 
 target_link_libraries(findit PRIVATE SDL3::SDL3)
 target_link_libraries(findit PRIVATE GLEW::GLEW)
+target_link_libraries(findit PRIVATE SDL3_image::SDL3_image)
 target_link_libraries(findit PRIVATE GL)
 
 target_compile_options(findit PRIVATE "-g")
